# django_app_practice

./: Readme.md  pyproject.toml
core/: settings.py  urls.py
student/: urls.py  views.py
