[tool.poetry]
name = "school-app"
version = "0.1.0"
description = ""
authors = ["Mizanur Rahman <mizan.prog@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
